<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mcapp.mcapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.mcapp.mcapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.mcapp.mcapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.mcapp.mcapp.ui.favourites.FavouritesFragment"
        android:label="@string/title_navfavourites"
        tools:layout="@layout/favourites_fragment"/>

    <fragment
        android:id="@+id/navigation_budget"
        android:name="com.mcapp.mcapp.ui.charts.ChartsFragment"
        android:label="@string/title_navbudgetplanning"
        tools:layout="@layout/charts_fragment"/>
</navigation>