<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorWhite">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbarThumbVertical="@color/colorAccent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
           <!-- <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="278dp"
                android:background="@drawable/blue_bg">

                <ImageView
                    android:layout_width="77dp"
                    android:layout_height="77dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="93dp"
                    android:src="@drawable/treasuretrove_icon" />
            </FrameLayout>-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:background="@drawable/blue_bg">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="center"
                        android:src="@drawable/treasuretrove_icon" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Treasure Trove"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="25dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Monitor and manage your expenses"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="15dp"/>
                </LinearLayout>
             </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/layoutEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/background_input"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_mail"
                        android:tint="@color/colorAccent" />

                    <EditText
                        android:id="@+id/txt_email"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@null"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="41dp"
                    android:background="@color/colorWhite"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:text="Email Id"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTextSecondary"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/layoutEmailId"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/layoutEmailId" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/layoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/background_input"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_lock"
                        android:tint="@color/colorAccent" />

                    <!-- <EditText
                        android:id="@+id/txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:passwordToggleEnabled ="true"/>-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorAccent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:ems="15"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:inputType="textPassword"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="41dp"
                    android:background="@color/colorWhite"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:text="Password"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTextSecondary"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/layoutPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/layoutPassword" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/background_button"
                android:onClick="submit"
                android:text="Login"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorTextSecondary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_weight="1"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:text="@string/register"
                    android:textColor="@color/colorTextSecondary"
                    android:textStyle="bold" />
            </LinearLayout>
    </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/colorAccent"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

</RelativeLayout>